# implicit_languagemodels

./: README.md  implicit_jacobian.ipynb  noise.py  plot_noise.ipynb  pyproject.toml  run_noise.sh
.pipelines/: azure-pipelines.yaml
examples/: downstream_evaluation.py  state_tracking.py
hf_models/llama3-1.3b-explicit/: config.json  generation_config.json
hf_models/llama3-1.3b-implicit/: config.json
hf_models/llama3-1.3b-pretrain/: config.json
hf_models/llama3-130m-explicit/: config.json
hf_models/llama3-130m-implicit/: config.json
hf_models/llama3-130m-pretrain/: config.json
hf_models/llama3-370m-explicit/: config.json
hf_models/llama3-370m-implicit/: config.json
hf_models/llama3-370m-pretrain/: config.json
hf_models/llama3-760m-explicit/: config.json
hf_models/llama3-760m-implicit/: config.json
hf_models/llama3-760m-pretrain/: config.json
hf_models/mamba2-1.3b-explicit/: config.json
hf_models/mamba2-1.3b-implicit/: config.json
hf_models/mamba2-1.3b-pretrain/: config.json
hf_models/mamba2-130m-explicit/: config.json
hf_models/mamba2-130m-implicit/: config.json
hf_models/mamba2-130m-pretrain/: config.json
hf_models/mamba2-370m-explicit/: config.json
hf_models/mamba2-370m-implicit/: config.json
hf_models/mamba2-370m-pretrain/: config.json
hf_models/mamba2-760m-explicit/: config.json
hf_models/mamba2-760m-implicit/: config.json
implicit_llm/: __init__.py  backbones.py  implicit.py  register_models.py  sequential.py  utils.py
state_tracking/: README.md  dataset.py  trainer.py
tests/: test_evaluation.py  test_generate.py
(+15 files in other folders)
